--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
 
     <h1 class="titles">Contact Us</h1>
 
-    <form action="">
+    <form action=""> <!--What Action?-->
         <label for="firstname">First Name</label><br>
         <input type="text" id="firstname" name="firstname" placeholder="What's your first name?">
         <br>
