Bug fix and seperate styles into 2 sheets

--- a/quiz.html
+++ b/quiz.html
@@ -55,15 +55,15 @@
                     <input type="radio" id="red" name="type" value="red">
                     <label for="red">Red</label><br>
                     <input type="radio" id="red" name="type" value="red">
-                    <label for="red">Blue</label><br>
-                    <input type="radio" id="red" name="type" value="red">
-                    <label for="red">Black</label><br>
-                    <input type="radio" id="red" name="type" value="red">
-                    <label for="red">Yellow</label><br>
-                    <input type="radio" id="red" name="type" value="red">
-                    <label for="red">Green</label><br>
-                    <input type="radio" id="red" name="type" value="red">
-                    <label for="red">Pink</label><br>
+                    <label for="blue">Blue</label><br>
+                    <input type="radio" id="red" name="type" value="blue">
+                    <label for="blue">Black</label><br>
+                    <input type="radio" id="yellow" name="type" value="yellow">
+                    <label for="yellow">Yellow</label><br>
+                    <input type="radio" id="green" name="type" value="green">
+                    <label for="green">Green</label><br>
+                    <input type="radio" id="pink" name="type" value="pink">
+                    <label for="pink">Pink</label><br>
                     </class>
             </div>
             <div class="quizQuestion" id="fourthQ">
