--- a/index.html
+++ b/index.html
@@ -34,12 +34,10 @@
         <br>
         <div class="items">
             <div class="one">
-                <h1>Heading 1</h1>
+                <h1>Take Our Maternity Quiz!</h1>
                 <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                Find your maternity style with our quick personalized quiz! We include all body types and sizes
+                so you can get your perfect fit.
                 </p>
                 <br>
                 <a href="quiz.html">
@@ -96,12 +94,9 @@
                 </div>
             </div>
             <div class="eight">
-                <h1>Heading 2</h1>
+                <h1>Shop Our Spring Collection!</h1>
                 <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                Our newest collection is out! Browse our floral, colorful outfits perfect for every occasion.
                 </p>
                 <br>
                 <button type="button">Shop Around</button>
