added size options

--- a/productPage.html
+++ b/productPage.html
@@ -29,14 +29,24 @@
         <div class="two">
             <h1>Pink Ish Dress</h1>
             <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            Our stylish Pink Ish Dress is perfect for the spring weather. Breathable material, bright colors for all shapes and sizes!
             </p>
             <br>
             <br>
-            <label for="month">Month</label> <br>
+            <div class="centerItems">
+            <label for="size">Size</label><br>
+            <select id="size" name="size">
+                <option value="1">XXS</option>
+                <option value="2">XS</option>
+                <option value="3">S</option>
+                <option value="4">M</option>
+                <option value="5">L</option>
+                <option value="6">XL</option>
+                <option value="7">2XL</option>
+                <option value="8">3XL</option>
+            </select>
+            <br>
+            <label for="month">Month</label><br>
             <select id="month" name="month">
                 <option value="1">Month 1</option>
                 <option value="2">Month 2</option>
@@ -47,8 +57,9 @@
                 <option value="7">Month 7</option>
                 <option value="8">Month 8</option>
                 <option value="9">Month 9</option>
-            </select>
+            </select><br>
             <button type="button">Add to Cart</button>
+            </div>
         </div>
 
         <form action="">
