--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
         <select id="country" name="country">
             <option value="usa">United States of America</option>
             <option value="canada">Canada</option>
-            <option value="guyana">Guyanese</option>
+            <option value="guyana">Guyana</option>
             <option value="bangladesh">Bangladesh</option>
         </select>
         <br>
