--- a/quiz.html
+++ b/quiz.html
@@ -43,7 +43,7 @@
                 <select id="country" name="country">
                     <option value="usa">United States of America</option>
                     <option value="canada">Canada</option>
-                    <option value="guyana">Guyanese</option>
+                    <option value="guyana">Guyana</option>
                     <option value="bangladesh">Bangladesh</option>
                 </select>
             </div>
