Changed some css and added a list

--- a/productPage.html
+++ b/productPage.html
@@ -8,7 +8,7 @@
 <div class="blur2">
 <header>
     <div class="logo">
-        <img src="https://media.discordapp.net/attachments/949160449411272724/954453932380401714/WhiteLogo.png">
+        <a href="index.html"><img src="https://media.discordapp.net/attachments/949160449411272724/954453932380401714/WhiteLogo.png"></a>
     </div>
     <nav>
         <ul>
@@ -33,6 +33,11 @@
             The Pink Ish Dress is a piece of clothing for the prgnant woman that covers the body, protects the womb, and allows the legs to breathe.
             </p>
             <br>
+            <br>
+            <ul>
+                <li>Made with 100% Cotton</li>
+                <li>Made by Children in Unsafe Conditions</li>
+            </ul>
             <br>
             <div class="centerItems">
             <div class="inliner">
