--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
 <div class="blur2">
 <header>
     <div class="logo">
-        <img src="https://media.discordapp.net/attachments/949160449411272724/954453932380401714/WhiteLogo.png">
+        <a href="index.html"><img src="https://media.discordapp.net/attachments/949160449411272724/954453932380401714/WhiteLogo.png"></a>
     </div>
     <nav>
         <ul>
