Fixed add to cart button

--- a/productPage.html
+++ b/productPage.html
@@ -91,7 +91,7 @@
             <textarea id="subject" name="subject" placeholder="What do you think of the product?" style="height: 200px; width: 500px;"></textarea>
             <br>
             <div class="centerItems">
-                <input type="submit" value="Submit" style="height: 200px; width: 500px;">
+                <input type="submit" value="Submit">
             </div>
             </form>
         </div>
