Add email to quiz

--- a/quiz.html
+++ b/quiz.html
@@ -31,12 +31,15 @@
         </div>
         <form action="">
             <div class="quizQuestion" id="firstQ">
-                <h1>What's Your Name?</h1>
+                <h1>What's Your Name and Email?</h1>
                 <label for="firstname">First Name</label><br>
                 <input type="text" id="firstname" name="firstname" placeholder="What's your first name?">
                 <br>
                 <label for="lastname">Last Name</label><br>
                 <input type="text" id="lastname" name="lastname" placeholder="What's your last name?"">
+                <br>
+                <label for="email">Email</label><br>
+                <input type="email" id="email" name="email" placeholder="What's your email?">
             </div>
             <div class="quizQuestion" id="secondQ">
                 <label for="country"><h1>What Country are you From?</h1></label> <br>
