--- a/productPage.html
+++ b/productPage.html
@@ -36,7 +36,9 @@
             <br>
             <ul>
                 <li>Made with 100% Cotton</li>
+                <li>Tumble Dry Low</li>
                 <li>Made by Children in Unsafe Conditions</li>
+                <li>Product Code: 8800</li>
             </ul>
             <br>
             <div class="centerItems">
